feat: adding post Usuario route

--- a/UsuariosAPI/appsettings.json
+++ b/UsuariosAPI/appsettings.json
@@ -6,5 +6,8 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "UsuarioConnection": "Server=localhost;Database=userDB;Uid=root;Password=password123;charset=utf8"
+  }
 }
