--- a/UsuariosAPI/appsettings.json
+++ b/UsuariosAPI/appsettings.json
@@ -9,5 +9,11 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "UsuarioConnection": "Server=localhost;Database=userDB;Uid=root;Password=password123;charset=utf8"
+  },
+  "EmailSettings": {
+    "From": "",
+    "SmtpServer": "smtp.gmail.com",
+    "Port": "465",
+    "Password": ""
   }
 }
